// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wishlist / components / external items delete alert > opened > on confirm button click > should close 1`] = `
<body
  style="margin-right: 8px; overflow: hidden; pointer-events: none;"
>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-controls="bits-24"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="hidden"
      data-alert-dialog-trigger=""
      data-state="closed"
      id="bits-22"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;

exports[`wishlist / components / external items delete alert > opened > should be displayed 1`] = `
<body
  style="margin-right: 8px; --scrollbar-width: 1024px; overflow: hidden; pointer-events: none;"
>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <div
      class="modal-backdrop"
      data-alert-dialog-overlay=""
      data-state="open"
      id="bits-5"
      style="pointer-events: auto;"
    >
      <!---->
    </div>
    
    
    
    <!---->
     
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
     
    <div
      aria-describedby="bits-10"
      aria-labelledby="bits-9"
      aria-modal="true"
      class="modal-box flex flex-col justify-center"
      data-alert-dialog-content=""
      data-state="open"
      id="bits-6"
      role="alertdialog"
      style="pointer-events: auto; outline: none;"
      tabindex="-1"
    >
      <div
        class="contents prose"
      >
        <!---->
        <div
          aria-level="2"
          data-alert-dialog-title=""
          data-state="open"
          id="bits-9"
          role="heading"
        >
          Подвердите удаление
          <!---->
        </div>
        
        <!---->
         
        <!---->
        <!---->
        <p
          data-alert-dialog-description=""
          data-state="open"
          id="bits-10"
        >
          Вы уверены, что хотите удалить все сюрпризы из списка?
        </p>
        
        
        <!---->
         
        <div
          class="card-actions"
        >
          <!---->
          <button
            class="btn btn-neutral flex-1"
            data-alert-dialog-cancel=""
            data-state="open"
            id="bits-11"
            tabindex="0"
          >
            Отмена
            <!---->
          </button>
          
          <!---->
           
          <!---->
          <button
            class="btn btn-error flex-1"
            data-alert-dialog-action=""
            data-state="open"
            id="bits-12"
          >
            Удалить
            <!---->
          </button>
          
          <!---->
        </div>
      </div>
      <!---->
    </div>
    
    
    
    
    
    
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-controls="bits-6"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="hidden"
      data-alert-dialog-trigger=""
      data-state="open"
      id="bits-4"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;

exports[`wishlist / components / external items delete alert > opened > should close on cancel button click 1`] = `
<body
  style=""
>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-controls="bits-15"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="hidden"
      data-alert-dialog-trigger=""
      data-state="closed"
      id="bits-13"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;

exports[`wishlist / components / external items delete alert > should be displayed closed 1`] = `
<body>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="hidden"
      data-alert-dialog-trigger=""
      data-state="closed"
      id="bits-1"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;
